--- a/index.html
+++ b/index.html
@@ -73,14 +73,15 @@
         <!-- Hero Section -->
         <section class="relative h-[70vh] md:h-[85vh] text-white">
             <!-- Background Image -->
-            <div class="absolute inset-0">
-                <img src="https://placehold.co/1600x900/a7f3d0/44403c?text=Relaxing+Massage+Room" 
-                     alt="A serene and relaxing massage room with soft lighting"
-                     class="w-full h-full object-cover"
-                     onerror="this.src='https://placehold.co/1600x900/a7f3d0/44403c?text=Serene+Wellness'">
-                <!-- Overlay -->
-                <div class="absolute inset-0 bg-black bg-opacity-40"></div>
-            </div>
+          <div class="absolute inset-0">
+    <img src="./myimage.jpg"
+         alt="Custom image"
+         class="w-full h-full object-cover"
+         onerror="this.src='https://placehold.co/1600x900/a7f3d0/44403c?text=Serene+Wellness'">
+    
+    <div class="absolute inset-0 bg-black bg-opacity-40"></div>
+</div>
+
             
             <!-- Hero Content -->
             <div class="relative z-10 h-full flex flex-col justify-center items-center text-center px-6">
